Fix/restore missing pom configuration
[skip repo][skip db][skip tas][ags]