@@ -29,8 +29,15 @@
       <pluginManagement>
          <plugins>
             <plugin>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <configuration>
+                  <argLine>
+                     --illegal-access=permit
+                  </argLine>
+               </configuration>
+            </plugin>
+            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
-               <version>3.0.0-M5</version>
                <configuration>
                   <argLine>
                      --illegal-access=permit
